# ArrayToYAMLConversion

./: .gitignore  README.md
1/: CMakeLists.txt  lab1_conversion.cpp  lab1_conversion.h  lab1_dialog.cpp  lab1_dialog.h  main.cpp  utils.cpp  utils.h
1/include/: lab1_conversion.h  utils.h
1/src/: lab1_conversion.cpp  lab1_dialog.cpp  main.cpp  utils.cpp
1/tests/: test.cpp
